tests/positive/BuiltinsMultiOpenImport/Nat.juvix
module Nat;

builtin nat
type Nat :=
  | zero : Nat
  | suc : Nat → Nat;

open Nat using {zero; suc} public;
