tests/negative/Internal/PatternConstructor.juvix
module PatternConstructor;

type A := a : A;
open A;

type B := b : B;
open B;

f : A → B
  | b := b;
